@@ -33,8 +33,9 @@ my @args = ('-F', $cnf, 'h=127.1', qw(-d issue_519 --explain --chunk-size 3));
 
 $sb->load_file('master', "mk-table-checksum/t/samples/issue_519.sql");
 
-my $default_output = "issue_519 t     SELECT /*issue_519.t:1/4*/ 0 AS chunk_num, COUNT(*) AS cnt, COALESCE(LOWER(CONV(BIT_XOR(CAST(CRC32(CONCAT_WS('#', `i`, `y`, `t`, CONCAT(ISNULL(`t`)))) AS UNSIGNED)), 10, 16)), 0) AS crc FROM `issue_519`.`t` FORCE INDEX (`PRIMARY`) WHERE (`i` < '4')
-issue_519 t     `i` < '4'
+my $default_output = "issue_519 t     SELECT /*issue_519.t:1/5*/ 0 AS chunk_num, COUNT(*) AS cnt, COALESCE(LOWER(CONV(BIT_XOR(CAST(CRC32(CONCAT_WS('#', `i`, `y`, `t`, CONCAT(ISNULL(`t`)))) AS UNSIGNED)), 10, 16)), 0) AS crc FROM `issue_519`.`t` FORCE INDEX (`PRIMARY`) WHERE (`i` = 0)
+issue_519 t     `i` = 0
+issue_519 t     `i` > 0 AND `i` < '4'
 issue_519 t     `i` >= '4' AND `i` < '7'
 issue_519 t     `i` >= '7' AND `i` < '10'
 issue_519 t     `i` >= '10'
@@ -66,8 +67,9 @@ $output = output(
 
 is(
    $output,
-"issue_519 t     SELECT /*issue_519.t:1/4*/ 0 AS chunk_num, COUNT(*) AS cnt, COALESCE(LOWER(CONV(BIT_XOR(CAST(CRC32(CONCAT_WS('#', `i`, `y`, `t`, CONCAT(ISNULL(`t`)))) AS UNSIGNED)), 10, 16)), 0) AS crc FROM `issue_519`.`t` FORCE INDEX (`myidx`) WHERE (`i` < '4')
-issue_519 t     `i` < '4'
+"issue_519 t     SELECT /*issue_519.t:1/5*/ 0 AS chunk_num, COUNT(*) AS cnt, COALESCE(LOWER(CONV(BIT_XOR(CAST(CRC32(CONCAT_WS('#', `i`, `y`, `t`, CONCAT(ISNULL(`t`)))) AS UNSIGNED)), 10, 16)), 0) AS crc FROM `issue_519`.`t` FORCE INDEX (`myidx`) WHERE (`i` = 0)
+issue_519 t     `i` = 0
+issue_519 t     `i` > 0 AND `i` < '4'
 issue_519 t     `i` >= '4' AND `i` < '7'
 issue_519 t     `i` >= '7' AND `i` < '10'
 issue_519 t     `i` >= '10'
@@ -81,8 +83,9 @@ $output = output(
 
 is(
    $output,
-"issue_519 t     SELECT /*issue_519.t:1/4*/ 0 AS chunk_num, COUNT(*) AS cnt, COALESCE(LOWER(CONV(BIT_XOR(CAST(CRC32(CONCAT_WS('#', `i`, `y`, `t`, CONCAT(ISNULL(`t`)))) AS UNSIGNED)), 10, 16)), 0) AS crc FROM `issue_519`.`t` FORCE INDEX (`y`) WHERE (`y` < '2003')
-issue_519 t     `y` < '2003'
+"issue_519 t     SELECT /*issue_519.t:1/5*/ 0 AS chunk_num, COUNT(*) AS cnt, COALESCE(LOWER(CONV(BIT_XOR(CAST(CRC32(CONCAT_WS('#', `i`, `y`, `t`, CONCAT(ISNULL(`t`)))) AS UNSIGNED)), 10, 16)), 0) AS crc FROM `issue_519`.`t` FORCE INDEX (`y`) WHERE (`y` = 0)
+issue_519 t     `y` = 0
+issue_519 t     `y` > 0 AND `y` < '2003'
 issue_519 t     `y` >= '2003' AND `y` < '2006'
 issue_519 t     `y` >= '2006' AND `y` < '2009'
 issue_519 t     `y` >= '2009'
@@ -98,8 +101,9 @@ $output = output(
 
 is(
    $output,
-"issue_519 t     SELECT /*issue_519.t:1/4*/ 0 AS chunk_num, COUNT(*) AS cnt, COALESCE(LOWER(CONV(BIT_XOR(CAST(CRC32(CONCAT_WS('#', `i`, `y`, `t`, CONCAT(ISNULL(`t`)))) AS UNSIGNED)), 10, 16)), 0) AS crc FROM `issue_519`.`t`  WHERE (`y` < '2003')
-issue_519 t     `y` < '2003'
+"issue_519 t     SELECT /*issue_519.t:1/5*/ 0 AS chunk_num, COUNT(*) AS cnt, COALESCE(LOWER(CONV(BIT_XOR(CAST(CRC32(CONCAT_WS('#', `i`, `y`, `t`, CONCAT(ISNULL(`t`)))) AS UNSIGNED)), 10, 16)), 0) AS crc FROM `issue_519`.`t`  WHERE (`y` = 0)
+issue_519 t     `y` = 0
+issue_519 t     `y` > 0 AND `y` < '2003'
 issue_519 t     `y` >= '2003' AND `y` < '2006'
 issue_519 t     `y` >= '2006' AND `y` < '2009'
 issue_519 t     `y` >= '2009'
