@@ -1,13 +1,17 @@
 DATABASE TABLE  CHUNK HOST      ENGINE      COUNT         CHECKSUM TIME WAIT STAT  LAG
-test2    resume2     0 127.0.0.1 MyISAM          3         f4dbdf21    0    0 NULL NULL
-test2    resume2     0 127.1     MyISAM          3         f4dbdf21    0    0 NULL NULL
-test2    resume2     1 127.0.0.1 MyISAM          3         6abf4a82    0    0 NULL NULL
-test2    resume2     1 127.1     MyISAM          3         6abf4a82    0    0 NULL NULL
-test2    resume2     2 127.0.0.1 MyISAM          4         bce55ff5    0    0 NULL NULL
-test2    resume2     2 127.1     MyISAM          4         bce55ff5    0    0 NULL NULL
+test2    resume2     0 127.0.0.1 MyISAM          0             NULL    0    0 NULL NULL
+test2    resume2     0 127.1     MyISAM          0             NULL    0    0 NULL NULL
+test2    resume2     1 127.0.0.1 MyISAM          3         f4dbdf21    0    0 NULL NULL
+test2    resume2     1 127.1     MyISAM          3         f4dbdf21    0    0 NULL NULL
+test2    resume2     2 127.0.0.1 MyISAM          3         6abf4a82    0    0 NULL NULL
+test2    resume2     2 127.1     MyISAM          3         6abf4a82    0    0 NULL NULL
+test2    resume2     3 127.0.0.1 MyISAM          4         bce55ff5    0    0 NULL NULL
+test2    resume2     3 127.1     MyISAM          4         bce55ff5    0    0 NULL NULL
 test     resume     0 127.0.0.1 InnoDB          3         f4dbdf21    0    0 NULL NULL
 test     resume     0 127.1     InnoDB          3         f4dbdf21    0    0 NULL NULL
 test     resume     1 127.0.0.1 InnoDB          3         6abf4a82    0    0 NULL NULL
 test     resume     1 127.1     InnoDB          3         6abf4a82    0    0 NULL NULL
 test     resume     2 127.0.0.1 InnoDB          4         bce55ff5    0    0 NULL NULL
-test     resume     2 127.1     InnoDB          4         bce55ff5    0    0 NULL NULL
+test     resume     2 127.1     InnoDB          3         6abf4a82    0    0 NULL NULL
+test     resume     3 127.0.0.1 InnoDB          4         bce55ff5    0    0 NULL NULL
+test     resume     3 127.1     InnoDB          4         bce55ff5    0    0 NULL NULL
