@@ -3,6 +3,7 @@ Changelog for mk-table-checksum and mk-checksum-filter:
    * Changed --no-use-index to --[no]use-index.
    * --schema did not allow --[no]check-replication-filters (issue 1060).
    * --chunk-index is only used if a chunkable column uses it (issue 519).
+   * Added --[no]zero-chunk (issue 941).
 
 2010-06-08: version 1.2.15
 
